--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -39,9 +40,41 @@
         </li>
       </ul>
       <img src="img/Logo.svg" alt="Logo da AluraBooks" class="container__imagem">
+      <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
     </div>
+
+    <ul class="opções">
+      <input type="checkbox" id="opções-menu" class="opções__botao">
+      <label for="opcões-menu">
+        <li class="opções__item">Categorias</li>
+      </label>
+
+      <ul class="lista-menu">
+        <li class="lista-menu__item">
+          <a href="#" class="lista-menu__link">PROGRAMAÇÃO</a>
+        </li>
+        <li class="lista-menu__item">
+          <a href="#" class="lista-menu__link">FRONT-END</a>
+        </li>
+        <li class="lista-menu__item">
+          <a href="#" class="lista-menu__link">INFRAESTRUTURA</a>
+        </li>
+        <li class="lista-menu__item">
+          <a href="#" class="lista-menu__link">BUSINESS</a>
+        </li>
+        <li class="lista-menu__item">
+          <a href="#" class="lista-menu__link">DESING & UX</a>
+        </li>
+      </ul>
+
+
+      <li class="opções__item"><a href="#" class="opções__link">Favoritos</a></li>
+      <li class="opções__item"><a href="#" class="opções__link">Minha estante</a></li>
+    </ul>
+
     <div class="container">
-      <a href="#"><img src="img/Vector.svg" alt="Meus favoritos" class="container__imagem"></a>
+      <a href="#"><img src="img/Vector.svg" alt="Meus favoritos"
+          class="container__imagem container__imagem-transparente"></a>
       <a href="#"><img src="img/Sacola.svg" alt="Carrinho de compras" class="container__imagem"></a>
       <a href="#"><img src="img/user.svg" alt="Meu perfil" class="container__imagem"></a>
     </div>
@@ -99,7 +132,7 @@
       </div>
     </div>
 
-  <!-- começando o segundo pages navigation-->
+    <!-- começando o segundo pages navigation-->
   </section>
   <section class="carrossel">
     <h2 class="carrossel__titulo">Mais vendidos</h2>
@@ -108,7 +141,7 @@
       <!-- Additional required wrapper -->
       <!-- If we need pagination -->
       <div class="swiper-pagination"></div>
-  
+
       <div class="swiper-wrapper">
         <!-- Slides -->
         <div class="swiper-slide"><img src="img/Arquitetura.svg" alt="arch"></div>
@@ -117,13 +150,13 @@
         <div class="swiper-slide"><img src="img/MetricasAgeis.svg" alt="Métricas Ágeis"></div>
         <div class="swiper-slide"><img src="img/Tuning.svg" alt="Tuning"></div>
       </div>
-  
+
       <!-- If we need navigation buttons -->
       <div class="swiper-button-prev"></div>
       <div class="swiper-button-next"></div>
-  
+
     </div>
-  
+
     <div class="card">
       <!-- 1ª linha -->
       <div class="card__descricao">
@@ -139,7 +172,7 @@
         <!-- 2ª coluna -->
         <img src="/img/Perfil-escritora 1.png" class="descricao__imagem">
       </div>
-  
+
       <!-- 2ª linha -->
       <div class="card__botoes">
         <!-- 1ª coluna -->
@@ -151,7 +184,7 @@
       </div>
     </div>
   </section>
-  
+
   <section class="topicos">
     <h2 class="topicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
     <ul class="topicos__lista">
@@ -188,7 +221,7 @@
     <input type="email" placeholder="Cadastre seu e-mail" class="contato__email">
   </section>
 
-  <hr/>
+  <hr />
 
   <footer class="rodape">
     <h2 class="rodape__titulo">Desenvolvimento por Luca Pinheiro Gomes</h2>
