--- a/index.html
+++ b/index.html
@@ -75,8 +75,14 @@
     <div class="container">
       <a href="#"><img src="img/Vector.svg" alt="Meus favoritos"
           class="container__imagem container__imagem-transparente"></a>
-      <a href="#"><img src="img/Sacola.svg" alt="Carrinho de compras" class="container__imagem"></a>
-      <a href="#"><img src="img/user.svg" alt="Meu perfil" class="container__imagem"></a>
+      <a href="#" class="container__link">
+        <img src="img/Sacola.svg" alt="Carrinho de compras" class="container__imagem">
+        <p class="container__texto">Minha sacola</p>
+      </a>
+      <a href="#" class="container__link">
+        <img src="img/user.svg" alt="Meu perfil" class="container__imagem">
+        <p class="container__texto">Meu perfil</p>
+      </a>
     </div>
   </header>
   <section class="banner">
